adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -10,20 +10,20 @@
 		
 		<div class='favorites'>
 			<div class='list fav-dev'>
-				<p>Develop</p>
+				<p>I</p>
 				<ul>
 					<li><a href='http://www.awwwards.com'>Awwwards</a></li>
-					<li><a href='http://codepen.io'>CodePen</a></li>
+					<li><a href='http://www.commandlinefu.com/'>commandline fu</a></li>
 					<li><a href='https://www.github.com'>GitHub</a></li>
 					<li><a href='https://developers.google.com'>Google Developers</a></li>
-					<li><a  href='http://www.sitepoint.com'>SitePoint</a></li>
+					<li><a  href='http://lifehacker.com'>Lifehacker</a></li>
 					<li><a href='http://technologyreview.com/magazine/'>MIT Tech Review</a></li>
-					<li><a href='https://web-development.zeef.com'>Web Dev Resources</a></li>
+					<li><a href='http://www.tvguide.com/listings/'>Tv Guide</a></li>
 				</ul>
 			</div>
 			
 			<div class='list fav-ent'>
-				<p>Media</p>
+				<p>II</p>
 				<ul>
 					<li><a href='http://www.arstechnica.com'>Ars Technica</a></li>
 					<li><a href='http://io9.com/'>io9</a></li>
@@ -37,7 +37,7 @@
 			</div>
 
 			<div class='list fav-shop'>
-				<p>Shop</p>
+				<p>III</p>
 				<ul>
 					<li><a href='http://www.amazon.com'>Amazon</a></li>
 					<li><a href='http://www.monoprice.com'>Monoprice</a></li>
@@ -48,9 +48,9 @@
 			</div>
 
 			<div class='list fav-learn'>
-				<p>Learn</p>
+				<p>IV</p>
 				<ul>
-					<li><a href='https://www.duolingo.com'>Duolingo</a></li>
+					<li><a href='http://distrowatch.com/'>Distro Watch</a></li>
 					<li><a href='http://www.freecodecamp.com/map'>Free Code Camp</a></li>
 					<li><a href='http://ocw.mit.edu/index.htm'>MIT Open Courseware</a></li>
 					<li><a href='http://www.theodinproject.com'>The Odin Project</a></li>
