adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -10,6 +10,7 @@
 		
 		<div class='favorites'>
 			<div class='list fav-dev'>
+				<p>WIP Under Construction </p>
 				<p>I</p>
 				<ul>
 					<li><a href='http://www.awwwards.com'>Awwwards</a></li>
@@ -44,6 +45,7 @@
 					<li><a href='http://www.newegg.com'>Newegg</a></li>
 					<li><a href='http://6dollarshirts.com/'>Six Dollars Shirts</a></li>
 					<li><a href='http://www.tigerdirect.com/'>TigerDirect</a></li>
+					<li><a href='http://www.git.io/'>git io shortener</a></li>
 				</ul>
 			</div>
 
