adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -7,10 +7,9 @@
 	</head>
 	
 	<body>
-		
+		<p>... WIP Under Construction ... </p>
 		<div class='favorites'>
 			<div class='list fav-dev'>
-				<p>WIP Under Construction </p>
 				<p>I</p>
 				<ul>
 					<li><a href='http://www.awwwards.com'>Awwwards</a></li>
