--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -44,7 +44,8 @@
 					<li><a href='http://www.newegg.com'>Newegg</a></li>
 					<li><a href='http://6dollarshirts.com/'>Six Dollars Shirts</a></li>
 					<li><a href='http://www.tigerdirect.com/'>TigerDirect</a></li>
-					<li><a href='http://www.git.io/'>git io shortener</a></li>
+					<li><a href='https://git.io/'>Git io</a></li>
+					<li><a href='http://imgur.com/'>Imgur</a></li>
 				</ul>
 			</div>
 
