adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Home</title>
+		<title>Main Lobby</title>
 		<link rel='stylesheet' type='text/css' href='css/homepage.css'/>
 		<link rel='stylesheet' type='text/css' href='css/fonts.css'/>
 	</head>
 	
 	<body>
-		<p>... WIP Under Construction ... </p>
+		<center><p>... WIP Under Construction ...</p></center>
 		<div class='favorites'>
 			<div class='list fav-dev'>
 				<p>I</p>
@@ -19,6 +19,7 @@
 					<li><a  href='http://lifehacker.com'>Lifehacker</a></li>
 					<li><a href='http://technologyreview.com/magazine/'>MIT Tech Review</a></li>
 					<li><a href='http://www.tvguide.com/listings/'>Tv Guide</a></li>
+					<li><a href='http://www.imdb.com'>IMDb</a></li>
 				</ul>
 			</div>
 			
