--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -10,21 +10,17 @@
 		<center><p>... WIP Under Construction ...</p></center>
 		<div class='favorites'>
 			<div class='list fav-dev'>
-				<p>I</p>
+				<p>Home</p>
 				<ul>
-					<li><a href='http://www.awwwards.com'>Awwwards</a></li>
-					<li><a href='http://www.commandlinefu.com/'>commandline fu</a></li>
-					<li><a href='https://www.github.com'>GitHub</a></li>
-					<li><a href='https://developers.google.com'>Google Developers</a></li>
-					<li><a  href='http://lifehacker.com'>Lifehacker</a></li>
-					<li><a href='http://technologyreview.com/magazine/'>MIT Tech Review</a></li>
-					<li><a href='http://www.tvguide.com/listings/'>Tv Guide</a></li>
+					<li><a href='https://www.gmail.com'>Gmail</a></li>
 					<li><a href='http://www.imdb.com'>IMDb</a></li>
+					<li><a href='http://www.tvguide.com/listings/'>Tv Guide</a></li>
+					<li><a href='http://www.weather.com/weather/today/l/42.59,-83.28'>Weather</a></li>
 				</ul>
 			</div>
 			
 			<div class='list fav-ent'>
-				<p>II</p>
+				<p>Media</p>
 				<ul>
 					<li><a href='http://www.arstechnica.com'>Ars Technica</a></li>
 					<li><a href='http://io9.com/'>io9</a></li>
@@ -38,38 +34,36 @@
 			</div>
 
 			<div class='list fav-shop'>
-				<p>III</p>
+				<p>Shop</p>
 				<ul>
 					<li><a href='http://www.amazon.com'>Amazon</a></li>
 					<li><a href='http://www.monoprice.com'>Monoprice</a></li>
 					<li><a href='http://www.newegg.com'>Newegg</a></li>
 					<li><a href='http://6dollarshirts.com/'>Six Dollars Shirts</a></li>
 					<li><a href='http://www.tigerdirect.com/'>TigerDirect</a></li>
-					<li><a href='https://git.io/'>Git io</a></li>
-					<li><a href='http://imgur.com/'>Imgur</a></li>
 				</ul>
 			</div>
 
 			<div class='list fav-learn'>
-				<p>IV</p>
+				<p>Tools</p>
 				<ul>
+					<li><a href='http://www.commandlinefu.com/'>commandline fu</a></li>
 					<li><a href='http://distrowatch.com/'>Distro Watch</a></li>
-					<li><a href='http://www.freecodecamp.com/map'>Free Code Camp</a></li>
-					<li><a href='http://ocw.mit.edu/index.htm'>MIT Open Courseware</a></li>
-					<li><a href='http://www.theodinproject.com'>The Odin Project</a></li>
+					<li><a href='https://git.io/'>Git io</a></li>
+					<li><a href='https://www.github.com'>GitHub</a></li>
+					<li><a href='https://developers.google.com'>Google Developers</a></li>
+					<li><a href='http://imgur.com/'>Imgur</a></li>
+					<li><a  href='http://lifehacker.com'>Lifehacker</a></li>
 					<li><a href='http://www.stackoverflow.com'>Stack Overflow</a></li>
-					<li><a href='http://www.udacity.com'>Udacity</a></li>
 				</ul>
 			</div>
 		</div>
 		
 		<div class='googles'>
-			<p><a href='https://mail.google.com'>Gmail</a></p>
 			<p><a href='https://plus.google.com/u/0/'>Google +</a></p>	
 			<p><a href='http://linuxbbq.org/bbs/index.php'>LinuxBBQ</a></p>		
 			<p><a href='http://nixers.net/'>Nixers</a></p>
 			<p><a href='https://www.reddit.com/r/unixporn'>/r/UNIXPORN</a></p>
-			<p><a href='http://www.weather.com/weather/today/l/42.59,-83.28'>Weather</a></p>
 		</div>
 		
 		<form method="get" action="http://www.google.com/search"> 
