adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -13,10 +13,9 @@
 				<p>Home</p>
 				<ul>
 					<li><a href='http://distrowatch.com/'>Distro Watch</a></li>
-					<li><a href='http://espn.go.com/'>ESPN</a></li>
 					<li><a href='https://www.gmail.com'>Gmail</a></li>
 					<li><a href='http://www.imdb.com'>IMDb</a></li>
-					<li><a href='http://www.pgatour.com'>Pga Tour</a></li>
+					<li><a href='http://bgr.com/2015/09/29/netflix-new-movies-october-2015/'>Netflix New Oct</a></li>
 					<li><a href='http://www.tvguide.com/listings/'>Tv Guide</a></li>
 					<li><a href='http://www.weather.com/weather/today/l/42.59,-83.28'>Weather</a></li>
 				</ul>
