--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -12,7 +12,8 @@
 			<div class='list fav-dev'>
 				<p>Home</p>
 				<ul>
-					<li><a href='http://distrowatch.com/'>Distro Watch</a></li>
+					<li><a href='http://www.mariobatali.com'>Mario Batali</a></li>
+					<li><a href='http://www.seriouseats.com'>Food Lab</a></li>
 					<li><a href='https://www.gmail.com'>Gmail</a></li>
 					<li><a href='http://www.imdb.com'>IMDb</a></li>
 					<li><a href='http://bgr.com/2015/09/29/netflix-new-movies-october-2015/'>Netflix New Oct</a></li>
@@ -50,6 +51,7 @@
 				<p>Tools</p>
 				<ul>
 					<li><a href='http://www.commandlinefu.com/'>commandline fu</a></li>
+					<li><a href='http://distrowatch.com/'>Distro Watch</a></li>	
 					<li><a href='https://git.io/'>Git io</a></li>
 					<li><a href='https://www.github.com'>GitHub</a></li>
 					<li><a href='https://developers.google.com'>Google Developers</a></li>
