--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -56,6 +56,7 @@
 					<li><a href='https://git.io/'>Git io</a></li>
 					<li><a href='https://www.github.com'>GitHub</a></li>
 					<li><a href='https://developers.google.com'>Google Developers</a></li>
+					<li><a href='https://news.ycombinator.com'>Hacker News</a></li>
 					<li><a href='http://imgur.com/'>Imgur</a></li>
 					<li><a  href='http://lifehacker.com'>Lifehacker</a></li>
 					<li><a href='http://www.stackoverflow.com'>Stack Overflow</a></li>
