adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -21,6 +21,7 @@
 					<li><a href='http://bgr.com/2015/09/29/netflix-new-movies-october-2015/'>Netflix New Oct</a></li>
 					<li><a href='http://www.tvguide.com/listings/'>Tv Guide</a></li>
 					<li><a href='http://www.weather.com/weather/today/l/42.59,-83.28'>Weather</a></li>
+					<li><a href='http://xkcd.com/'>xkcd</a></li>
 				</ul>
 			</div>
 			
