adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -18,7 +18,7 @@
 					<li><a href='https://www.gmail.com'>Gmail</a></li>
 					<li><a href='http://www.imdb.com'>IMDb</a></li>
 					<li><a href='http://www.mariobatali.com'>Mario Batali</a></li>
-					<li><a href='http://bgr.com/2015/09/29/netflix-new-movies-october-2015/'>Netflix New Oct</a></li>
+					<li><a href='http://www.huffingtonpost.com/entry/new-on-netflix-november-2015_56271dcae4b0bce34702fe86'>Netflix New Nov</a></li>
 					<li><a href='http://www.tvguide.com/listings/'>Tv Guide</a></li>
 					<li><a href='http://www.weather.com/weather/today/l/42.59,-83.28'>Weather</a></li>
 					<li><a href='http://xkcd.com/'>xkcd</a></li>
@@ -33,6 +33,7 @@
 					<li><a href='https://www.linkedin.com'>Linkedin</a></li>
 					<li><a href='https://www.pinterest.com/'>Pinterest</a></li>
 					<li><a href='http://www.reddit.com'>Reddit</a></li>
+					<li><a href='http://www.theverge.com/'>The Verge</a></li>	
 					<li><a href='https://www.tumblr.com'>Tumblr</a></li>
 					<li><a href='http://www.wired.com'>Wired</a></li>
 					<li><a href='https://www.youtube.com'>YouTube</a></li>
