adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -35,6 +35,7 @@
 					<li><a href='http://www.reddit.com'>Reddit</a></li>
 					<li><a href='http://www.theverge.com/'>The Verge</a></li>	
 					<li><a href='https://www.tumblr.com'>Tumblr</a></li>
+					<li><a href='http://variety.com'>Variety</a></li>
 					<li><a href='http://www.wired.com'>Wired</a></li>
 					<li><a href='https://www.youtube.com'>YouTube</a></li>
 				</ul>
