adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -75,7 +75,7 @@
 			<p><a href='https://www.reddit.com/r/unixporn'>/r/UNIXPORN</a></p>
 		</div>
 		
-		<form method="get" action="http://www.google.com/search"> 
+		<form method="get" action="http://www.duckduckgo.com"> 
 			<input class='search' name='q' type='text' placeholder='Google'/> 
 			<input class='go' type='submit' value='GO'/>
 		</form>
