adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -65,6 +65,7 @@
 					<li><a  href='http://lifehacker.com'>Lifehacker</a></li>
 					<li><a href='http://www.stackoverflow.com'>Stack Overflow</a></li>
 					<li><a href='https://www.teknik.io'>teknik</a></li>
+					<li><a href='http://www.tineye.com'>TinEye</a></li>					
 				</ul>
 			</div>
 		</div>
