--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -78,7 +78,7 @@
 		</div>
 		
 		<form method="get" action="http://www.duckduckgo.com"> 
-			<input class='search' name='q' type='text' placeholder='Google'/> 
+			<input class='search' name='q' type='text' placeholder='DuckDuckGo'/> 
 			<input class='go' type='submit' value='GO'/>
 		</form>
 		
