adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -65,7 +65,6 @@
 					<li><a  href='http://lifehacker.com'>Lifehacker</a></li>
 					<li><a href='http://www.stackoverflow.com'>Stack Overflow</a></li>
 					<li><a href='https://www.teknik.io'>teknik</a></li>
-					<li><a href='http://www.tineye.com'>TinEye</a></li>					
 				</ul>
 			</div>
 		</div>
@@ -78,7 +77,7 @@
 		</div>
 		
 		<form method="get" action="http://www.duckduckgo.com"> 
-			<input class='search' name='q' type='text' placeholder='DuckDuckGo'/> 
+			<input class='search' name='q' type='text' placeholder='Duck Duck'/> 
 			<input class='go' type='submit' value='GO'/>
 		</form>
 		
