adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -7,7 +7,7 @@
 	</head>
 	
 	<body>
-		<center><p>... WIP Under Construction ...</p></center>
+		<center><p>... Under Constant Construction ...</p></center>
 		<div class='favorites'>
 			<div class='list fav-dev'>
 				<p>Home</p>
