--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -17,7 +17,7 @@
 					<li><a href='https://www.gmail.com'>Gmail</a></li>
 					<li><a href='http://www.imdb.com'>IMDb</a></li>
 					<li><a href='http://www.mariobatali.com'>Mario Batali</a></li>
-					<li><a href='http://www.huffingtonpost.com/entry/new-on-netflix-november-2015_56271dcae4b0bce34702fe86'>Netflix New Nov</a></li>
+					<li><a href='http://www.huffingtonpost.com/2014/11/26/netflix-december-2014_n_6225110.html'>Netflix New</a></li>
 					<li><a href='http://www.tvguide.com/listings/'>Tv Guide</a></li>
 					<li><a href='http://www.weather.com/weather/today/l/42.59,-83.28'>Weather</a></li>
 					<li><a href='http://xkcd.com/'>xkcd</a></li>
@@ -61,7 +61,8 @@
 					<li><a href='https://developers.google.com'>Google Developers</a></li>
 					<li><a href='https://news.ycombinator.com'>Hacker News</a></li>
 					<li><a href='http://imgur.com/'>Imgur</a></li>
-					<li><a  href='http://lifehacker.com'>Lifehacker</a></li>
+					<li><a href='http://lifehacker.com'>Lifehacker</a></li>
+					<li><a href='https://www.oznzb.com'>OZNZB</a></li>
 					<li><a href='http://www.stackoverflow.com'>Stack Overflow</a></li>
 					<li><a href='https://www.teknik.io'>teknik</a></li>
 				</ul>
