adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -17,7 +17,7 @@
 					<li><a href='https://www.gmail.com'>Gmail</a></li>
 					<li><a href='http://www.imdb.com'>IMDb</a></li>
 					<li><a href='http://www.mariobatali.com'>Mario Batali</a></li>
-					<li><a href='http://www.huffingtonpost.com/2014/11/26/netflix-december-2014_n_6225110.html'>Netflix New</a></li>
+					<li><a href='http://www.huffingtonpost.com/entry/new-on-netflix-december-2015_5654626ae4b0879a5b0c518c'>Netflix New</a></li>
 					<li><a href='http://www.tvguide.com/listings/'>Tv Guide</a></li>
 					<li><a href='http://www.weather.com/weather/today/l/42.59,-83.28'>Weather</a></li>
 					<li><a href='http://xkcd.com/'>xkcd</a></li>
