adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -61,7 +61,7 @@
 					<li><a href='https://news.ycombinator.com'>Hacker News</a></li>
 					<li><a href='http://imgur.com/'>Imgur</a></li>
 					<li><a href='http://lifehacker.com'>Lifehacker</a></li>
-					<li><a href='https://www.oznzb.com'>OZNZB</a></li>
+					<li><a href='https://www.oznzb.com'>OZnzb</a></li>
 					<li><a href='http://www.stackoverflow.com'>Stack Overflow</a></li>
 					<li><a href='https://www.teknik.io'>teknik</a></li>
 				</ul>
