adds and tweaks

--- a/net/home/Desktop/startpage/index.html
+++ b/net/home/Desktop/startpage/index.html
@@ -18,7 +18,7 @@
 					<li><a href='http://www.imdb.com'>IMDb</a></li>
 					<li><a href='http://www.digitaltrends.com/home-theater/whats-new-on-netflix-shows-movies/'>Netflix New</a></li>
 					<li><a href='http://www.tvguide.com/listings/'>Tv Guide</a></li>
-					<li><a href='http://forecast.weather.gov/MapClick.php?CityName=Pontiac&state=MI&site=DTX&lat=42.6491&lon=-83.2872#.V2vL0fEpBQI'>Weather</a></li>
+					<li><a href='http://www.clickondetroit.com/weather'>Weather</a></li>
 					<li><a href='http://xkcd.com/'>xkcd</a></li>
 				</ul>
 			</div>
@@ -42,7 +42,7 @@
 			<div class='list fav-shop'>
 				<p>Shop</p>
 				<ul>
-					<li><a href='http://www.amazon.com'>Amazon</a></li>
+					<li><a href='http://smile.amazon.com'>Amazon</a></li>
 					<li><a href='http://www.monoprice.com'>Monoprice</a></li>
 					<li><a href='http://www.newegg.com'>Newegg</a></li>
 					<li><a href='http://6dollarshirts.com/'>Six Dollars Shirts</a></li>
