adds and tweaks

--- a/open/home/Desktop/startpage/index.html
+++ b/open/home/Desktop/startpage/index.html
@@ -16,9 +16,9 @@
 					<li><a href='http://www.seriouseats.com'>Food Lab</a></li>
 					<li><a href='https://www.gmail.com'>Gmail</a></li>
 					<li><a href='http://www.imdb.com'>IMDb</a></li>
-					<li><a href='http://www.huffingtonpost.com/entry/netflix-new-january-2016_56786df0e4b06fa6887e4b26'>Netflix New</a></li>
+					<li><a href='http://www.whats-on-netflix.com/coming-soon/'>Netflix New</a></li>
 					<li><a href='http://www.tvguide.com/listings/'>Tv Guide</a></li>
-					<li><a href='http://www.weather.com/weather/today/l/42.59,-83.28'>Weather</a></li>
+					<li><a href='http://www.clickondetroit.com/weather'>Weather</a></li>
 					<li><a href='http://xkcd.com/'>xkcd</a></li>
 				</ul>
 			</div>
